[package]
name = "NChat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"